--- a/sites/all/themes/ppp2016/less/content.less
+++ b/sites/all/themes/ppp2016/less/content.less
@@ -623,6 +623,9 @@ a.tooltips span {
     background: #f8f7f7 none repeat scroll 0 0;
    // border-radius: 4px;
     padding: 30px;
+    .field {
+        word-wrap: break-word;
+    }
   }
 
   // Related DH nodes (bottom)
@@ -689,7 +692,10 @@ a.tooltips span {
   }
 }
 
-
+//Meta data field on DH
+#popup-element-1 {
+    display: none; 
+}
 
 @media (max-width: @screen-md-min) {
   .ds-2col > .group-left {
